# simpltknopt

./: .gitignore  DEVELOPER_GUIDE.md  README.md  SPEC.md  pyproject.toml  stko.yaml.example
examples/: ci_noninteractive.py  custom_rubric.py  manual_subtasks.py  simple_pipeline.py  with_verification.py
registry/: models.yaml
simpltknopt/: __init__.py  cli.py  config.py  decomposer.py  executor.py  planner.py  registry.py  router.py  verifier.py
simpltknopt/models/: __init__.py  registry_models.py  task.py
tests/: test_cli.py  test_decomposer.py  test_registry.py  test_router.py  test_verifier.py
