[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpltknopt"
version = "0.1.0"
description = "Token-optimized model router — route sub-tasks to the cheapest capable model across Claude, OpenAI, Gemini, and DeepSeek"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SimplTknOpt"}]
keywords = ["llm", "routing", "token-optimization", "anthropic", "openai", "gemini", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
]

[project.scripts]
stko = "simpltknopt.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["simpltknopt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
